--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -33,6 +33,7 @@
 			border: 1px solid #DDD;
 			border-radius: 4px;
 			position: absolute;
+			z-index: 1;
 			top: 100%;
 			margin: 0;
 			left: 0;
